# biosaic

./: .gitignore  README.md  biosaic_vae_training.ipynb  pyproject.toml  setup.py  test.py
biosaic/: __init__.py  bpe.py  database.py  kmer.py  process.py
biosaic/auto/: config.json  dataset.py  embedder.py  model.py  run.py  tokenizer.py
main/csrc/: perchar.c
model/: base_1k.model  base_2k.model  base_3k.json  base_3k.model  base_4k.json  base_4k.model  base_5k.model  base_6k.model  base_7k.model  base_8k.model  dna_1k.model  verify.json
src/: __init__.py  bpe.py  cbase.py  kmer.py  main.py  process.py
src/auto/: dataset.py  embedder.py  model.py  run.py  tokenizer.py
src/csrc/: base.c  base.h  kmer.c  kmer.h  perchar.h
src/vocabs/: base_2k.json  base_3k.json  base_4k.json  base_5k.json
tests/: test_kmer.c  test_kmer.py
training/: biosaic_vae_training.ipynb  vae_training.ipynb
training files/: biosaic_evoformer.ipynb  biosaic_vae.ipynb
