[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biosaic"
version = "0.0.6"
description = "Tokenizer for encoding/decoding DNA & amino acid sequences"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "shivendra", email = "shivharsh44@gmail.com" }
]
dependencies = [
  "requests>=2.28.0"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Operating System :: OS Independent"
]

[tool.setuptools]
package-dir = { "biosaic" = "src" }

[tool.setuptools.packages.find]
where = ["src"]